# wb_telegram_bot

./: .gitignore  LICENSE.txt  README.md  bot.py  pyproject.toml  requirements.txt  tox.ini
config/: config_local.py
wb_bot/handlers/: find_item_position_handler.py  start_handler.py
wb_scrapper/: find_position_by_art.py
