[tool.poetry]
name = "wildberries-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Dmitrii-Kopeikin <kopeikindp@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "wildberries_telegram_bot"},
]

[tool.poetry.dependencies]
python = "^3.11"
telebot = "^0.0.5"
selenium = "^4.9.1"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
